# wings

./: .env.development  .env.example  .gitignore  .npmrc  .prettierrc.json  README.md  TECH_STACK_CONSTRAINTS.md  biome.json  env.d.ts  eslint.config.mjs  netlify.toml  next.config.ts  package-lock.json  package.json  plan.md  pnpm-lock.yaml  pyproject.toml  tailwind.config.mjs  tsconfig.json  vite.config.ts
.github/workflows/: supabase-keepalive.yml
.husky/: pre-commit
.storybook/: main.ts  preview.ts
api/: docs_host.py  main.py
app/: data.ts  globals.css  root.tsx
app/articles/: 7311728260135469075.md  articles.json
app/config/: admin-menu.ts  index.ts  toast.ts  web.ts
app/hooks/: delayOpen.ts  index.ts  popover.ts  portal.ts  subscribe-theme.ts  time.ts
app/query/: index.ts
app/server/: article.ts  home.ts  supabase.ts
app/store/: system.ts  user.ts
app/utils/: algolia.ts  cursor.ts  floating.ts  index.ts  skills.ts  supabase.ts  unit.ts
plugins/: env.ts
scripts/: generate-env-types.ts  generate-icon.ts  generate-supabase-types.ts
src/: globals.css  motion.create.tsx
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/articles/: 7380650414416347170.md
src/assets/: font.css
src/config/: admin-menu.ts  index.ts  web.ts
src/hooks/: delayOpen.ts  index.ts  lockScroll.ts  popover.ts  portal.ts  syncSearch.ts  theme.ts  time.ts
src/icons/: Bilibili.tsx  Csdn.tsx  FlyingCrane.tsx  Github.tsx  Juejin.tsx
src/query/: index.ts
src/server/: article.ts  home.ts
types/: env.d.ts  index.d.ts  supabase.additional.ts  supabase.ts
(+210 files in other folders)
